@startuml
'https://plantuml.com/class-diagram

class Instructor {
    -- Atributs --
    - nom: String
    - anysExp: Int
    - cotxe: Cotxe
    -- Mètodes --
    + constructor(String, Int, Cotxe)
    + assignarPractica(Alumne, Practica): Boolean
    + consultarNombreTotalPractiques(List<Practica>): Int
}

class Alumne {
    -- Atributs --
    - nom: String
    - edat: Int
    - teorica: Boolean
    - quantPractiques: Int
    -- Mètodes --
    + constructor(String, Int)
    + incrementarPractiques()
    + getQuantPractiques(): Int
    + aprovarTeorica()
    + getTeorica(): Boolean
}

class Practica{
    -- Atributs --
    - alumne: Alumne
    - instructor: Instructor
    - data: Date
    - durada: Int
    -- Mètodes --
    + constructor(Alumne, Instructor, Data)
    + setDurada(Int)
    + setAlumne(Alumne)
}

class Cotxe{
    -- Atributs --
    - marca: String
    - model: String
    - cv: Int
    - cc: Float
    - kms: Int
    -- Mètodes --
    + constructor(String, String, Int, Float)
}

Practica "n" o-- "1" Instructor: supervisa
Practica "n" o-- "1" Alumne: reserva
Instructor "1" *-- "1" Cotxe: té

@enduml